syntax = "proto3";

package bluetooth.hal;

import "google/protobuf/empty.proto";
import "facade/common.proto";

service HciHalFacade {
  rpc SendCommand(facade.Data) returns (google.protobuf.Empty) {}
  rpc StreamEvents(google.protobuf.Empty) returns (stream facade.Data) {}

  rpc SendAcl(facade.Data) returns (google.protobuf.Empty) {}
  rpc StreamAcl(google.protobuf.Empty) returns (stream facade.Data) {}

  rpc SendSco(facade.Data) returns (google.protobuf.Empty) {}
  rpc StreamSco(google.protobuf.Empty) returns (stream facade.Data) {}

  rpc SendIso(facade.Data) returns (google.protobuf.Empty) {}
  rpc StreamIso(google.protobuf.Empty) returns (stream facade.Data) {}
}
